--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,17 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "barryvdh/laravel-ide-helper": "^2.6@dev",
-        "barryvdh/laravel-debugbar": "^3.2@dev"
+        "intervention/image": "^2.4@dev",
+        "yajra/laravel-datatables-oracle": "^9.0@dev",
+        "spatie/laravel-permission": "dev-master",
+        "spatie/laravel-medialibrary": "dev-master",
+        "barryvdh/laravel-dompdf": "^0.8.0@dev",
+        "laravel/telescope": "^4.0@dev",
+        "laravel/passport": "^9.0@dev",
+        "rap2hpoutre/laravel-log-viewer": "dev-master",
+        "owen-it/laravel-auditing": "^10.0@dev",
+        "beyondcode/laravel-websockets": "dev-master",
+        "laravel/ui": "^3.0@dev"
     },
     "autoload": {
         "psr-4": {
@@ -25,5 +34,9 @@
                 "Thomas\\Bundle\\ThomasBundleServiceProvider"
             ]
         }
+    },
+    "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.6@dev",
+        "barryvdh/laravel-debugbar": "^3.2@dev"
     }
 }
